# cxkernel

./: .clang-format  .cproject  .gitignore  .gitignore~  .gitlab-ci.yml  .gitpod.yml  .project  .travis.yml  CMakeLists.txt  CODECHECK.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  EurusOScheck.cppcheck  FLAWFINDER.txt  Gemfile  LICENSE  LICENSE.md  LqiuiDOS-codecheck.cppcheck  Makefile  Makefile.in  README.md  SETUP.md  _config.yml  configure  configure.ac  contact-me.html  faqs.html  index.html  liquidos-overview.html  log.txt  params.json  screenshots.html  setenv.sh  winbuild.bat  winconf.bat
.trunk/: trunk.yaml
EurusOScheck-cppcheck-build-dir/: BasicDrawUtils.a1  apic.a1  bootacpi.a1  bootmm.a1  console.a1  cpu.a1  exceptions.a1  files.txt  gdt.a1  idt.a1  init.a1  interrupts.a1  kernel.a1  lastResults.xml  lib.a1  llio.a1  log.a1  malloc.a1  meminit.a1  multiboot_utils.a1  page_alloc.a1  paging.a1  panic_assert.a1  pic.a1  printk.a1  serial.a1  smp.a1  stack_trace.a1  statistics.txt  string.a1  symbol_table.a1  syscalls.a1  tty.a1  vga.a1  vsprintf.a1
_includes/: footer.html  head.html  header.html  post-list.html
_layouts/: blog.html  landing-page.html
_posts/: 2015-01-30-Lorem.markdown  2015-02-06-welcome-to-jekyll.markdown  2015-02-17-Curabitur.markdown
abi/: icxxabi.cc
abi/arch/dummy/: crti.s  crtn.s
abi/arch/x86/: crti.S  crti.S.i  crtn.S  crtn.S.i  start.S  start.S.i
arch/dummy/: init.cc
arch/x86/: cpu.cc  init.cc  llio.c  strace.cc
arch/x86-64/: asm.h  build.cmake  entry.asm  init.cc  interface.h  internal.h  interrupts.cc  linker.ld  mmu.cc  private.h  thread.cc  thread.h  types.h
arch/x86-64/include/: asm.h  interface.h  thread.h  types.h
arch/x86/32/: exceptions.cc  gdt.cc  i386-extern.cc  i386-stub.c  idt.cc  init.cc  mmu.cc
bochs/: bochsout.txt  bochsrc.bxrc  bx_enh_dbg.ini
core/: assert.cc  build.cmake  console.cc  interrupts.cc  kernel.cc  main.cc  mp.cc  mutex.cc  pmm.cc  sched.cc  slab.cc  spinlock.cc  thread.cc  vmm.cc  vmregion.cc  wait.cc
core/include/: assert.h  loaderabi.h
core/include/arch/: interface.h  types.h
core/include/core/: mem.h  mp.h  mutex.h  pmm.h  slab.h  spinlock.h  thread.h  vm.h  vmregion.h  wait.h
core/include/platform/: interface.h
core/mm/: BootAllocator.cc  NodeAllocator.cc  PhysicalAllocator.cc  bootalloc.cc  pmm.cc  pmm_node.cc  slab.cc  vmalloc.cc  vmm.cc
css/: style.css
docs/: header.html  layout.md  memorymap.md  some shit.md  toolchain.md
dump/: dump1.txt
grub/: Makefile  Makefile.in  grub.cfg
grub/ramfs/: Makefile  hw.asm  ramfs.tar
include/: common.h  compiler.h  config.h  console.h  platform.h  system.h  unitytest.h  utils.h
include/arch/: arch_interface.h  arch_types.h  atomic.h  debug.h  interface.h  mmu.h  types.h
include/core/: bootalloc.h  memory.h  nodealloc.h  pmm.h  pmm_node.h  slab.h  vm.h  vmm.h
include/platform/: console.h  interrupts.h  platform.h
isodir/boot/: ramfs.tar
js/: init.js
kernelsrc/: CODECHECK.sh  LiquiDOS.iso  Makefile  Makefile.in  bochsout.txt  build.sh  linker.ld  setenv.sh
kernelsrc/arch/: README.md
kernelsrc/boot/: start.asm  start.s
kernelsrc/core/: console.c  device.c  kernel.c  lib.c  log.c  main.c  printk.c  string.c  symbol_table.c  tty.c  vsprintf.c
kernelsrc/drivers/: acpi.c  initrd.c  keyboard.c  serial.c  vesa.c
kernelsrc/ds/: list.c  tree.c
kernelsrc/fs/: initrd.c  vfs.c
kernelsrc/gdb/: i386-stub.c
kernelsrc/grub/: create.sh  grub.cfg  ramfs.tar
kernelsrc/include/: arch.h  assert.h  autoconf.h  bitmap.h  common.h  compiler_flags.h  config.h  cpufeatset.h  errno.h  exp_common.h  export.h  header_template.h  list.h  log.h  multiboot.h  multiboot2.h  multiboot_old.h  panic.h  platforms.h  system.h  tree.h  tty.h  utils.h
kernelsrc/kernel/: kernel.c
kernelsrc/lib/: experimental.c  lib.c  list.c  math.c  panic_assert.c  string.c  system.c  tree.c
kernelsrc/mm/: dlmalloc.c  kheap.c  liballoc.c  malloc.c  page_alloc.c  paging.c  pmm.c  sbrk.c
kernelsrc/nbproject/: configurations.xml  project.xml
kernelsrc/security/: beforeinit.c  rand.c  ssp.c  time.c
kernelsrc/tasking/: elfloader.c  process.c  symbol_table.c
lib/ebl/: alloc.cc  assert.h  atomic.h  bit.h  cxxabi.cc  guard.h  icxxabi.cc  linked_list.h  memory.cc  memory.h  new.cc  new.h  source_location.h  status.h  stdio.cc  stdio.h  string.cc  string.h  thread_safety.h  type_traits.h  util.h
lib/elf/: elf.h  elf32_parser.cc  elf64_parser.cc  elf_parser.cc  parser.cc  sysv_elf_abi.h
lib/elf_parser/: elf_parser.cc
lib/libc/: ctype.c  panic_assert.c  printk.c  stdlib.c  string.c  vsprintf.c
lib/libc++/: icxxabi.cc
lib/patches/: openlibm.patch  series
lib/tests/: build.cmake  ebl_bitfield.cc  ebl_linkedlist.cc  main.cc
loader/: Makefile.in
loader/dummy/: crti.s  crtn.s  start.s
loader/x86/: bootmem.cc  gdt.cc  loader.c  loader.cc  main.c  main.cc  mmu.cc  sources.cmake  sources.mk  start.asm  vga.c  vga.cc
loader/x86-64-multiboot2/: build.cmake  console.cc  linker.ld  loader.h  main.cc  mem.cc  mmu.cc  multiboot2.cc  multiboot2.h  start.asm
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
official-docs/: index.html  search.html  sitemap.xml
official-docs/mkdocs/: search_index.json
patches/: apply-patches.sh  newlib.patch
platform/pc/: console.cc  init.cc  interface.h  interrupts.cc  pic.cc  platform.cc  serial.cc  vga.c  vga.cc
scripts/: bochsrc.bxrc  bx_enh_dbg.ini  create_gdbinit.sh  grub.cfg  grub.cmake  launch_qemu.sh  lnenv.bat  make_grub_image.sh  toolchain.cmake  winenv.bat
src/: LiquiDOS.iso  Makefile  build.sh
src/boot/: start.asm
src/include/: common.h
src/kernel/: kernel.c
tests/: assert.cc  build.cmake  driver.cc  ebl_bitfield.cc  ebl_linkedlist.cc  inittests.c  integration.cmake  kernel_vmm.cc  kprintf-test.c  malloc-test.c  native.cc  sources.cmake  unit.cmake  unit_nodealloc.cc
tests/kernel/: inittests.c  kprintf-test.c  malloc-test.c
tests/unity/: unity.c  unity.h  unity_config.h  unity_config_hosted.h  unity_extern.cc  unity_internals.h
(+298 files in other folders)
